tests/baselines/reference/staticVisibility.errors.txt
==== tests/cases/compiler/staticVisibility.ts (5 errors) ====
    
    class C1 {
        
        p: any;
        static s: any;
    
        constructor() {
            var v = 0;
    
            s = 1; // should be error
            ~
!!! staticVisibility.ts(10,9): error TS2095: Could not find symbol 's'.
            C1.s = 1; // should be ok
    
            b(); // should be error
            ~
!!! staticVisibility.ts(13,9): error TS2095: Could not find symbol 'b'.
            C1.b(); // should be ok
        }
    
        static b() {
            v = 1; // should be error
            ~
!!! staticVisibility.ts(18,9): error TS2095: Could not find symbol 'v'.
            this.p = 0; // should be error
                 ~
!!! staticVisibility.ts(19,14): error TS2094: The property 'p' does not exist on value of type 'typeof C1'.
            C1.s = 1; // should be ok
        }
    }
    
    class C2 {
     
    barback:string = "";
     
    
    
    
    static get Bar() {return "bar";} // ok
     
    static set Bar(bar:string) {barback = bar;} // not ok
                                ~~~~~~~
!!! staticVisibility.ts(33,29): error TS2095: Could not find symbol 'barback'.
    
    }
    
    